After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 603312 - Volume-change should not deactivate mute status
Volume-change should not deactivate mute status
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2009-11-29 16:16 UTC by Jud Craft
Modified: 2010-11-10 18:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jud Craft 2009-11-29 16:16:23 UTC
This bug is slightly related to #598459, but deals with volume change.

On other devices, mute status is separate from volume level.  My TV can have any volume and still be muted, and changing the volume does not unmute the TV.

But in GNOME (specifically gnome-media 2.28.1), when the sound is muted (via the Sound Preferences, volume applet, or keyboard shortcut), any change to the volume level will unmute the system.

This is a little annoying, especially since I have one of those "spin-wheel" type volume controls on my laptop.  In the library with the laptop on my lap, brushing the wheel will demute the laptop.  Beeps and music (depending on how forgetful I am) then fill the room.


I originally thought this was a PulseAudio bug and filed, until I was informed that Pulse does not do anything to the mute state related to volume changes.  So this seems to be a gnome-volume-control specific behavior.


It would be nice if mute was not so easily deactivated.  It seems rather fragile in its current usage.
Comment 1 Michał Sawicz 2010-01-26 22:57:24 UTC
I can confirm that volume up does unmute, but volume down doesn't work at all when muted.

For me, at least volume down should work without unmuting audio, since you might want to lower the volume and unmute afterwards.
Comment 2 Bastien Nocera 2010-11-10 18:09:05 UTC
(In reply to comment #0)
> This bug is slightly related to #598459, but deals with volume change.
> 
> On other devices, mute status is separate from volume level.  My TV can have
> any volume and still be muted, and changing the volume does not unmute the TV.

And my previous TV only changed the mute status when volume up was pressed, and my current one 
unmutes as soon as I press volume up or volume down. The first behaviour was supposed to be the one implemented.

> But in GNOME (specifically gnome-media 2.28.1), when the sound is muted (via
> the Sound Preferences, volume applet, or keyboard shortcut), any change to the
> volume level will unmute the system.
> 
> This is a little annoying, especially since I have one of those "spin-wheel"
> type volume controls on my laptop.  In the library with the laptop on my lap,
> brushing the wheel will demute the laptop.  Beeps and music (depending on how
> forgetful I am) then fill the room.

You can disable those keys, and assign them to something harder to do by mistake in the keyboard shortcut preferences...

> It would be nice if mute was not so easily deactivated.  It seems rather
> fragile in its current usage.

As I mentioned, you can disable those keyboard shortcuts in the preferences.

(In reply to comment #1)
> I can confirm that volume up does unmute, but volume down doesn't work at all
> when muted.
> 
> For me, at least volume down should work without unmuting audio, since you
> might want to lower the volume and unmute afterwards.

Yep, that was a bug:

commit 41f6f61344d9f20745771ed8db6d0e516462a3f3
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Nov 10 18:05:39 2010 +0000

    media-keys: Make volume down when muted work
    
    It will not change the mute status, but it will change the volume,
    so you can lower the volume before unmuting.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=603312