media-keys: Make volume down when muted work

It will not change the mute status, but it will change the volume,
so you can lower the volume before unmuting.

https://bugzilla.gnome.org/show_bug.cgi?id=603312